kubernetes/overlays/dev/patches/ddi-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddi
spec:
  rules:
    - host: ddi.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ddi
                port:
                  name: http
